--- a/appinfo.json
+++ b/appinfo.json
@@ -5,7 +5,7 @@
   "companyName": "Marcin Zawiejski",
   "versionLabel": "1.0",
   "sdkVersion": "3",
-  "targetPlatforms": ["aplite", "basalt"],
+  "targetPlatforms": ["basalt"],
   "watchapp": {
     "watchface": true
   },
